[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/textbox/TextBox.gd" type="Script" id=1]
[ext_resource path="res://scripts/textbox/TextboxStatePreparation.gd" type="Script" id=2]
[ext_resource path="res://scripts/textbox/TextboxStateReading.gd" type="Script" id=3]
[ext_resource path="res://scripts/textbox/TextboxStateFinished.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/ui/textbox.png" type="Texture" id=5]
[ext_resource path="res://assets/resources/sprite_frames/character_portraits/HeroPortraitSpriteFrames.tres" type="SpriteFrames" id=6]
[ext_resource path="res://assets/sprites/ui/ticker01.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/ui/ticker02.png" type="Texture" id=8]

[sub_resource type="AnimatedTexture" id=1]
flags = 5
frames = 2
fps = 5.0
frame_0/texture = ExtResource( 7 )
frame_1/texture = ExtResource( 8 )
frame_1/delay_sec = 0.0

[node name="TextBox" type="CanvasLayer"]
layer = 3
script = ExtResource( 1 )

[node name="TextBox" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Margin" type="MarginContainer" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 780.0
margin_right = -40.0
margin_bottom = -40.0

[node name="NinePatchRect" type="NinePatchRect" parent="TextBox/Margin"]
margin_right = 1840.0
margin_bottom = 260.0
texture = ExtResource( 5 )
patch_margin_left = 173
patch_margin_top = 80
patch_margin_right = 173
patch_margin_bottom = 80

[node name="Margin" type="MarginContainer" parent="TextBox/Margin/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 25.0
margin_right = -20.0
margin_bottom = -25.0

[node name="HBox" type="HBoxContainer" parent="TextBox/Margin/NinePatchRect/Margin"]
margin_right = 1790.0
margin_bottom = 210.0
custom_constants/separation = 25

[node name="Control" type="Control" parent="TextBox/Margin/NinePatchRect/Margin/HBox"]
margin_right = 200.0
margin_bottom = 210.0
rect_min_size = Vector2( 200, 200 )

[node name="AnimatedPortrait" type="AnimatedSprite" parent="TextBox/Margin/NinePatchRect/Margin/HBox/Control"]
frames = ExtResource( 6 )
animation = "boil"
frame = 3
playing = true
offset = Vector2( 100, 100 )

[node name="HBox" type="HBoxContainer" parent="TextBox/Margin/NinePatchRect/Margin/HBox"]
margin_left = 225.0
margin_right = 1790.0
margin_bottom = 210.0
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="TextBox/Margin/NinePatchRect/Margin/HBox/HBox"]
margin_right = 1510.0
margin_bottom = 210.0
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="MarginContainer" type="MarginContainer" parent="TextBox/Margin/NinePatchRect/Margin/HBox/HBox/VBox"]
margin_right = 1510.0

[node name="CharacterName" type="Label" parent="TextBox/Margin/NinePatchRect/Margin/HBox/HBox/VBox"]
margin_top = 15.0
margin_right = 1510.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 64 )
custom_colors/font_color = Color( 0.623529, 0.670588, 0.756863, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "HERO"

[node name="Text" type="RichTextLabel" parent="TextBox/Margin/NinePatchRect/Margin/HBox/HBox/VBox"]
margin_top = 94.0
margin_right = 1510.0
margin_bottom = 210.0
size_flags_vertical = 3
custom_colors/default_color = Color( 0.623529, 0.670588, 0.756863, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "Damn, look at me go! Damn, look at me go! Damn, look at me go! Damn, look at me go! Damn, look at me go! Damn, look at me go!"

[node name="TickerBox" type="VBoxContainer" parent="TextBox/Margin/NinePatchRect/Margin/HBox/HBox"]
margin_left = 1514.0
margin_right = 1565.0
margin_bottom = 210.0

[node name="Margin" type="Control" parent="TextBox/Margin/NinePatchRect/Margin/HBox/HBox/TickerBox"]
margin_right = 51.0
margin_bottom = 171.0
size_flags_vertical = 3

[node name="Ticker" type="TextureRect" parent="TextBox/Margin/NinePatchRect/Margin/HBox/HBox/TickerBox"]
margin_top = 175.0
margin_right = 51.0
margin_bottom = 210.0
texture = SubResource( 1 )

[node name="States" type="Node" parent="."]

[node name="Preparation" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="Reading" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Finished" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="States/Finished"]
